--- a/udqAutoApp/www/app/customer/order/orderMgr.html
+++ b/udqAutoApp/www/app/customer/order/orderMgr.html
@@ -58,7 +58,7 @@
             </label>
             <div ng-show="selectOrder.state==4||selectOrder.state==5">
                 <label class="item item-input input-costume-list">
-                    <i>照片</i>
+                    <span class="input-label">照片</span>
                 </label>
                 <div class="row" style="width:100%;margin:0px;padding:0px;">
                     <div class="col"><img src={{selectOrder.photoUrl1}} id="img1" ng-click="gotoPhoto(1)" style="width:100%;height:auto;float:left;margin:0px;padding:0px"></div>
