--- a/udqAutoApp/www/app/customer/auto/autoAdd.html
+++ b/udqAutoApp/www/app/customer/auto/autoAdd.html
@@ -8,20 +8,20 @@
         <form>
             <ion-list>
                 <label class="item item-input input-costume">
-                    <i class="icon ion-model-s placeholder-icon" style="color:white"></i>
+                    <span><i class="button button-clear icon ion-model-s" style="color:white"></i></span>
                     <input type="text" name="pn" ng-model="autoInfo.pn" placeholder="请输入车牌号(必填)" ng-trim="true" ngMaxlength="11" class="input-costume" style="color:white;font-weight:600;" required>
                 </label>
                 <!--<div class="spacer" style="height:10px;"></div>-->
                 <label class="item item-input input-costume">
-                    <i class="icon ion-ios-color-filter-outline placeholder-icon" style="color:white"></i>
+                    <span><i class="button button-clear icon ion-ios-color-filter-outline" style="color:white"></i></span>
                     <input type="text" name="brand" ng-model="autoInfo.brand" placeholder="请输入品牌(必填)" class="input-costume" style="color:white;font-weight:600;" required>
                 </label>
                 <label class="item item-input input-costume">
-                    <i class="icon ion-android-color-palette placeholder-icon" style="color:white"></i>
+                    <span><i class="button button-clear icon ion-android-color-palette placeholder-icon" style="color:white"></i></span>
                     <input type="text" name="color" ng-model="autoInfo.color" class="input-costume" placeholder="请输入颜色(必填)"  style="color:white;font-weight:600;" required>
                 </label>
                 <label class="item item-input input-costume">
-                    <i class="icon ion-android-options placeholder-icon" style="color:white"></i>
+                    <span><i class="button button-clear icon ion-android-options placeholder-icon" style="color:white"></i></span>
                     <input type="text" name="model" ng-model="autoInfo.model" placeholder="请输入型号(非必填)" class="input-costume"  style="color:white;font-weight:600;">
                 </label>
                 <!--<div class="spacer" style="height:10px;"></div>-->
@@ -63,7 +63,7 @@
                     </div>
                 </a>
                 <label class="item item-input input-costume">
-                    <i class="icon ion-location placeholder-icon" style="color:white"></i>
+                    <span><i class="button button-clear icon ion-location placeholder-icon" style="color:white"></i></span>
                     <input type="text" name="color" ng-model="autoInfo.position" class="input-costume" placeholder="请输入车位(非必填)" style="color:white;font-weight:600;">
                 </label>
             </ion-list>
