--- a/udqAutoApp/www/app/customer/auto/autoInfo.html
+++ b/udqAutoApp/www/app/customer/auto/autoInfo.html
@@ -6,28 +6,28 @@
     </ion-nav-bar>
     <ion-content>
         <ion-list>
-            <label class="item item-input input-costume">
+            <label class="item item-input input-costume-list">
                 <span class="input-label"><h2>车牌号</h2></span>
                 <p>{{selectedAuto.pn}}</p>
             </label>
-            <label class="item item-input input-costume">
+            <label class="item item-input input-costume-list">
                 <span class="input-label"><h2>品牌</h2></span>
                 <p>{{selectedAuto.brand}}</p>
             </label>
 
-            <label class="item item-input input-costume">
+            <label class="item item-input input-costume-list">
                 <span class="input-label"><h2>颜色</h2></span>
                 <p>{{selectedAuto.color}}</p>
             </label>
-            <label class="item item-input input-costume" ng-show="selectedAuto.model!=''">
+            <label class="item item-input input-costume-list" ng-show="selectedAuto.model!=''">
                 <span class="input-label"><h2>型号</h2></span>
                 <p>{{selectedAuto.model}}</p>
             </label>
-            <label class="item item-input input-costume">
+            <label class="item item-input input-costume-list">
                 <span class="input-label"><h2>区域</h2></span>
                 <p>{{selectedAuto.regionName}}</p>
             </label>
-            <label class="item item-input input-costume">
+            <label class="item item-input input-costume-list">
                 <span class="input-label"><h2>车位</h2></span>
                 <p>{{selectedAuto.position}}</p>
             </label>
