--- a/udqAutoApp/www/app/customer/auto/citySelect.html
+++ b/udqAutoApp/www/app/customer/auto/citySelect.html
@@ -10,7 +10,7 @@
         <ion-refresher on-refresh="doRefreshOfCity()"></ion-refresher>
 
         <ion-list ng-repeat="city in cities" >
-            <ion-radio ng-model="autoInfo.selectedCityId"  ng-click="goBackOfCitySelect()" value={{city.id}} class="input-costume-radio" ><p style="color:#383641;">{{city.name}}</p></ion-radio>
+            <ion-radio ng-model="autoInfo.selectedCityId"  ng-click="goBackOfCitySelect()" value={{city.id}} class="input-costume-radio" ><p style="color:black;">{{city.name}}</p></ion-radio>
         </ion-list>
 
     </ion-content>
