--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -4,7 +4,7 @@
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-            <button class="button button-clear" ng-click="exitCurrentUser()" style="color:#FFF571;font-weight:600;">注销</button>
+            <button class="button button-clear" ng-click="exitCurrentUser()" style="color:#FFBC01;font-weight:600;">注销</button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content padding="true" class="has-header">
@@ -13,9 +13,9 @@
                 <img src="image/mydianqu.png" style="height:100%;width:100%;" />
             </div>
             <div class="col col-50">
-                <p ng-show="user.name!=undefined">称呼：{{user.name}}</p>
-                <p ng-show="user.mobile!=undefined">手机：{{user.mobile}}</p>
-                <p ng-show="user.mobile!=undefined">余额：<a class="a-custome">{{user.balance}}</a>&nbsp;&nbsp;&nbsp;<button class="rechargeInloginPage" ng-click="goToRecharge()">充值</button></p>
+                <p class="home-p1" ng-show="user.name!=undefined">称呼：{{user.name}}</p>
+                <p class="home-p1" ng-show="user.mobile!=undefined">手机：{{user.mobile}}</p>
+                <p class="home-p1" ng-show="user.mobile!=undefined">余额：<a class="a-custome">{{user.balance}}</a>&nbsp;&nbsp;&nbsp;<button class="rechargeInloginPage" ng-click="goToRecharge()">充值</button></p>
             </div>
             <div class="col col-20">
                 <button class="button-i" ng-click="goToEditOwnerInfo()">
@@ -27,7 +27,7 @@
         <div class="row row-top row-text-align">
             <div class="col col-50 div-col-center" style="padding:0px 0px 0px 0px;">
                 <div class="div-col-innerdiv">
-                    <button class="button ownbutton-circle" ng-click="goToWashShopInfo()">
+                    <button class="button mybutton-circle" ng-click="goToWashShopInfo()">
                         <img src="image/aboutudianqu.png" style="vertical-align:central;height:100%; width:100%;" />
                     </button>
                     <p class="home-p">门店信息</p>
@@ -37,8 +37,8 @@
             <div class="col col-60"></div>
             <div class="col col-50 div-col-center" style="padding:0px 0px 0px 0px;">
                 <div class="div-col-innerdiv">
-                    <button class="button ownbutton-circle" ng-click="goToAutoList()">
-                        <img src="image/myauto.png" style="vertical-align:central;height:100%; width:100%;" />
+                    <button class="button mybutton-circle" ng-click="goToAutoList()">
+                        <img src="image/iwantwash.png" style="vertical-align:central;height:100%; width:100%;" />
                     </button>
                     <p class="home-p">我的车辆</p>
                 </div>
