--- a/udqAutoApp/www/app/customer/member/memberInfoEdit.html
+++ b/udqAutoApp/www/app/customer/member/memberInfoEdit.html
@@ -5,7 +5,7 @@
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goToCenter()"></button>
         </ion-nav-buttons>
         <!--<ion-nav-buttons side="right">
-            <button class="button-clear" ng-click="saveMemberInfo()" style="color:#FFF571;font-weight:600;">保存</button>
+            <button class="button-clear" ng-click="saveMemberInfo()" style="color:#FFBC01;font-weight:600;">保存</button>
         </ion-nav-buttons>-->
     </ion-nav-bar>
 
