--- a/udqAutoApp/www/app/customer/member/recharge.html
+++ b/udqAutoApp/www/app/customer/member/recharge.html
@@ -8,7 +8,7 @@
     <ion-content>
         <ion-list>
             <ion-list class="input-costume">
-                <ion-item class="input-costume" style="color:#383641;">
+                <ion-item class="input-costume">
                     <span class="span-black">请选择金额:</span>&nbsp;&nbsp;&nbsp;&nbsp;
                     <label class="select-type"><input type="radio" name="amount" ng-model="balance.amount" checked  value='0.02' />0.02</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <label class="select-type"><input type="radio" name="amount" ng-model="balance.amount" value='50' />50</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
