--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -4,7 +4,7 @@
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
         </ion-nav-buttons>
         <!--<ion-nav-buttons side="right">
-            <button class="button-clear" ng-click="commitOrder()" style="color:#FFF571;font-weight:600;">确定</button>
+            <button class="button-clear" ng-click="commitOrder()" style="color:#FFBC01;font-weight:600;">确定</button>
         </ion-nav-buttons>-->
     </ion-nav-bar>
 
@@ -13,7 +13,7 @@
             <ion-list class="input-costume">
                 <ion-radio class="input-costume-radio" ng-model="order.channel" value={{pay.name}} ng-repeat="pay in payMethod">
                     <img style="width:30px;height:30px;float:left" src="{{pay.imgUri}}" />
-                    <p style="color:#383641;float:left;height:30px;margin-left:15px;margin-top:2px">{{pay.text}}<a class="a-custome" ng-show="pay.name=='udq'">(余额：{{user.balance}}元)</a></p>
+                    <p style="color:black;float:left;height:30px;margin-left:15px;margin-top:2px">{{pay.text}}<a class="a-custome" ng-show="pay.name=='udq'">(余额：{{user.balance}}元)</a></p>
                 </ion-radio>
                 <div class="spacer" style="height:20px;"></div>
                 <div style="margin-left:25%">
