车辆删除bug修改

--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -30,6 +30,7 @@
                     <button class="button mybutton-circle" ng-click="goToWashShopInfo()">
                         <img src="image/aboutudianqu.png" style="vertical-align:central;height:100%; width:100%;" />
                     </button>
+                    <div style="height:5px"></div>
                     <p class="home-p">门店信息</p>
                 </div>
 
@@ -40,6 +41,7 @@
                     <button class="button mybutton-circle" ng-click="goToAutoList()">
                         <img src="image/iwantwash.png" style="vertical-align:central;height:100%; width:100%;" />
                     </button>
+                    <div style="height:5px"></div>
                     <p class="home-p">我的车辆</p>
                 </div>
             </div>
