--- a/udqAutoApp/www/app/customer/auto/autoAdd.html
+++ b/udqAutoApp/www/app/customer/auto/autoAdd.html
@@ -8,7 +8,7 @@
         <form>
             <ion-list>
                 <label class="item item-input input-costume">
-                    <span><i class="button button-clear icon ion-model-s" style="color:white"></i></span>
+                    <span><i class="button button-clear icon ion-android-car" style="color:white"></i></span>
                     <input type="text" name="pn" ng-model="autoInfo.pn" placeholder="请输入车牌号(必填)" ng-trim="true" ngMaxlength="11" class="input-costume" style="color:white;font-weight:600;" required>
                 </label>
                 <!--<div class="spacer" style="height:10px;"></div>-->
@@ -17,11 +17,11 @@
                     <input type="text" name="brand" ng-model="autoInfo.brand" placeholder="请输入品牌(必填)" class="input-costume" style="color:white;font-weight:600;" required>
                 </label>
                 <label class="item item-input input-costume">
-                    <span><i class="button button-clear icon ion-android-color-palette placeholder-icon" style="color:white"></i></span>
+                    <span><i class="button button-clear icon ion-android-color-palette" style="color:white"></i></span>
                     <input type="text" name="color" ng-model="autoInfo.color" class="input-costume" placeholder="请输入颜色(必填)"  style="color:white;font-weight:600;" required>
                 </label>
                 <label class="item item-input input-costume">
-                    <span><i class="button button-clear icon ion-android-options placeholder-icon" style="color:white"></i></span>
+                    <span><i class="button button-clear icon ion-ios-settings-strong" style="color:white"></i></span>
                     <input type="text" name="model" ng-model="autoInfo.model" placeholder="请输入型号(非必填)" class="input-costume"  style="color:white;font-weight:600;">
                 </label>
                 <!--<div class="spacer" style="height:10px;"></div>-->
