--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -8,20 +8,20 @@
 
     <ion-content>
         <!-- 图片轮播 -->
-        <ion-slide-box >
+        <ion-slide-box>
             <ion-slide>
                 <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
-                     <a href="#">
-                         <img src="image/circleImg/QRcode.png" height="100%" width="100%" style="vertical-align:central;" />
-                     </a>
-                 </div>
+                    <a href="#">
+                        <img src="image/circleImg/QRcode.png" height="100%" width="100%" style="vertical-align:central;" />
+                    </a>
+                </div>
             </ion-slide>
             <ion-slide>
                 <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
-                     <a href="#">
-                         <img src="image/circleImg/cover.png" height="100%" width="100%" style="vertical-align:central;" />
-                     </a>
-                 </div>
+                    <a href="#">
+                        <img src="image/circleImg/cover.png" height="100%" width="100%" style="vertical-align:central;" />
+                    </a>
+                </div>
             </ion-slide>
             <ion-slide>
                 <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
@@ -44,33 +44,32 @@
                     </a>
                 </div>
             </ion-slide>
-         </ion-slide-box>
+        </ion-slide-box>
 
-        <form>
-            <ion-list>
-                <div class="spacer"style="height:10px;"></div>
-                <div class="item item-input-inset input-costume">
-                    <label class="item-input-wrapper input-costume">
-                        <i class="icon ion-ios-telephone-outline placeholder-icon" style="color:white"></i>
-                        <input type="tel" name="userName" placeholder="请输入手机号码" ng-model="user.mobile" style="color:white;font-weight:600;" required>
-                    </label>
-                </div>
+        <ion-list>
+            <div class="spacer" style="height:10px;"></div>
+            <div class="item item-input-inset input-costume">
+                <label class="item-input-wrapper input-costume">
+                    <img src="image/logo/mobile.png" style="vertical-align:central;" />
+                    <input type="tel" name="userName" placeholder="请输入手机号码" ng-model="user.mobile" style="color:white;font-weight:600;" required>
+                </label>
+            </div>
 
-                <div class="item item-input-inset input-costume">
-                    <label class="item-input-wrapper input-costume">
-                        <i class="icon ion-key placeholder-icon" style="color:white"></i>
-                        <input type="tel" placeholder="请输入手机验证码" ng-model="user.psd" class="input-costume" style="color:white;font-weight:600;">
-                    </label>
-                    <button class="button registerInloginPage button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
-                        {{tips}}
-                    </button>
-                </div>
-            </ion-list>
-            <div class="spacer" style="height:20px;"></div>
-            <button ng-click="register()" style="color:white;background-color:#374D58;border:#374D58 solid;float:right;margin-right:5%;">新用户注册&nbsp;&nbsp;<i class="icon ion-ios-arrow-forward"></i></button>
-            <button class="button loginbutton  button-block button-small" style="width:90%;margin-left:5%;" ng-click="login()">登录</button>
-            <!--<button class="button registerInloginPage  button-block button-small" style="width:90%;margin-left:5%;" ng-click="register()">注册</button>-->
-        </form>
+            <div class="item item-input-inset input-costume">
+                <label class="item-input-wrapper input-costume">
+                    <img src="image/logo/password.png" style="vertical-align:central;" />
+                    <input type="tel" placeholder="请输入手机验证码" ng-model="user.psd" class="input-costume" style="color:white;font-weight:600;">
+                </label>
+                <button class="button registerInloginPage button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
+                    {{tips}}
+                </button>
+            </div>
+        </ion-list>
+        <div class="spacer" style="height:20px;"></div>
+        <button ng-click="register()" style="color:white;background-color:#374D58;border:#374D58 solid;float:right;margin-right:5%;">新用户注册&nbsp;&nbsp;<i class="icon ion-ios-arrow-forward"></i></button>
+        <button class="button loginbutton  button-block button-small" style="width:90%;margin-left:5%;" ng-click="login()">登录</button>
+        <!--<button class="button registerInloginPage  button-block button-small" style="width:90%;margin-left:5%;" ng-click="register()">注册</button>-->
+
     </ion-content>
 
 </ion-view>
