--- a/udqAutoApp/www/app/customer/order/historyOrder.html
+++ b/udqAutoApp/www/app/customer/order/historyOrder.html
@@ -5,7 +5,7 @@
             <ion-item ng-repeat="order in orderList" class="input-costume">
                 <div ng-click="goToSeeOrder(order)">
                     <p>订单编号：{{order.orderNo}}</p>
-                    <p>车牌号：{{order.autoPN}} &nbsp&nbsp&nbsp金额：<span class="a-custome">{{order.finalAmount|currency:'￥'}}</span></p>
+                    <p>车牌号：{{order.autoPN}}金额：<span class="a-custome">{{order.finalAmount|currency:'￥'}}</span></p>
                     <p>洗车类型：{{order.washTypeName}}</p>
                     <span class="badge span-mark" ng-show="order.state==0">未支付</span>
                     <span class="badge span-mark" ng-show="order.state==1">已下单</span>
@@ -16,10 +16,8 @@
                     <span class="badge span-mark" ng-show="order.state==5">已评价</span>
                 </div>
                 <ion-option-button class="button-balanced" ng-show="order.state==0" ng-click="payOrder(order)"><p>支付</p></ion-option-button>
-                <!--<ion-option-button class="button-assertive" ng-show="order.state==1" ng-click="cancelOrder(order)"><p>取消</p></ion-option-button>-->
                 <ion-option-button class="button-positive" ng-show="order.state==2||order.state==3||order.state==10||order.state==11" ng-click="scanOrder(order)"><p>查看</p></ion-option-button>
                 <ion-option-button class="button-royal" ng-show='order.state==4' ng-click="judgeOrder(order)"><p>评价</p></ion-option-button>
-                <!--<ion-option-button class="button-energized" ng-show='order.state==5' ng-click="shareOrder(order)"><p>分享</p></ion-option-button>-->
             </ion-item>
         </ion-list>
     </ion-content>
