--- a/udqAutoApp/www/app/customer/washType/washtypeSelect.html
+++ b/udqAutoApp/www/app/customer/washType/washtypeSelect.html
@@ -6,9 +6,9 @@
         <ion-nav-buttons side="right">
             <button class="button-clear" ng-click="goBackOfWashType()" style="color:#ffbc01;font-weight:600;">完成</button>
         </ion-nav-buttons>
-</ion-nav-bar>
+    </ion-nav-bar>
     <ion-content>
-        <ion-list ng-repeat="type in types" class="input-costume">
+        <ion-list class="input-costume">
             <ion-checkbox ng-model="types[0].check" ng-true-value="1" ng-false-value="1" class="input-costume" disabled>
                 <p>{{types[0].name}}</p><br />
                 <p>价格：{{types[0].amount|currency:'￥'}}</p><br />
