--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -28,9 +28,8 @@
             <div class="col col-50 div-col-center" style="padding:0px 0px 0px 0px;">
                 <div class="div-col-innerdiv">
                     <button class="button mybutton-circle" ng-click="goToWashShopInfo()">
-                        <img src="image/aboutudianqu.png" style="vertical-align:central;height:100%; width:100%;" />
+                        <img src="image/employee.png" style="vertical-align:central;height:100%; width:100%;" />
                     </button>
-                    <div style="height:5px"></div>
                     <p class="home-p">门店信息</p>
                 </div>
 
@@ -39,20 +38,11 @@
             <div class="col col-50 div-col-center" style="padding:0px 0px 0px 0px;">
                 <div class="div-col-innerdiv">
                     <button class="button mybutton-circle" ng-click="goToAutoList()">
-                        <img src="image/iwantwash.png" style="vertical-align:central;height:100%; width:100%;" />
+                        <img src="image/myauto.png" style="vertical-align:central;height:100%; width:100%;" />
                     </button>
-                    <div style="height:5px"></div>
                     <p class="home-p">我的车辆</p>
                 </div>
             </div>
         </div>
-        <!--<div class="col col-50">
-            <div class="col col-50 div-col-innerdiv">
-                <button class="button ownbutton-circle" ng-click="goToRecharge()">
-                    <img src="image/iwantwash.png" style="vertical-align:central; height:100%; width:100%;" />
-                </button>
-                <p class="home-p">充值&nbsp;&nbsp;<a class="a-custome">{{balance.amount|currency:'￥'}}</a></p>
-            </div>
-        </div>-->
     </ion-content>
 </ion-view>
