--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -67,6 +67,7 @@
         </ion-list>
         <div class="spacer" style="height:20px;"></div>
         <button ng-click="register()" style="color:white;background-color:#374D58;border:#374D58 solid;float:right;margin-right:5%;">新用户注册&nbsp;&nbsp;<i class="icon ion-ios-arrow-forward"></i></button>
+        <div class="spacer" style="height:20px;"></div>
         <button class="button loginbutton  button-block button-small" style="width:90%;margin-left:5%;" ng-click="login()">登录</button>
         <!--<button class="button registerInloginPage  button-block button-small" style="width:90%;margin-left:5%;" ng-click="register()">注册</button>-->
 
