--- a/udqAutoApp/www/main.html
+++ b/udqAutoApp/www/main.html
@@ -39,6 +39,12 @@
     <script src="app/customer/register/registerCtrl.js"></script>
     <script src="app/customer/register/registerSvr.js"></script>
     <script src="app/customer/washType/washtypeCtrl.js"></script>
+    <script src="app/customer/region/regionSelectController.js"></script>
+    <script src="app/customer/auto/autoListController.js"></script>
+    <script src="app/customer/washType/washTypeNoteController.js"></script>
+    <script src="app/customer/auto/autoAddCitySelectController.js"></script>
+    <script src="app/customer/auto/autoAddDistrictController.js"></script>
+    <script src="app/customer/auto/autoAddRegionSelectController.js"></script>
     <script src="app/common/popUpSvr.js"></script>
     <script src="app/common/ionicLoading.js"></script>
 
