--- a/udqAutoApp/www/app/customer/auto/districtSelect.html
+++ b/udqAutoApp/www/app/customer/auto/districtSelect.html
@@ -11,8 +11,8 @@
         <div style="text-align:center;margin-top:5px;" ng-show="autoInfo.selectedRegionId==undefined">
             <p>请先选择区域</p>
         </div>
-        <ion-list ng-repeat="district in districts" ng-show="district.pid ==autoInfo.selectedDistrictPid" >
-            <ion-radio ng-model="autoInfo.selectedDistrictId"  ng-click="goBackOfDistrictSelect()" value={{district.id}} class="input-costume-radio"><p style="color:black;">{{district.name}}</p></ion-radio>
+        <ion-list ng-repeat="district in districts" ng-show="district.pid ==autoInfo.selectedRegionId" >
+            <ion-radio ng-model="autoInfo.selectedDistrictId"  ng-click="goBackOfDoDistrictSelect(district)" value={{district.id}} class="input-costume-radio"><p style="color:black;">{{district.name}}</p></ion-radio>
         </ion-list>
 
     </ion-content>
