--- a/udqAutoApp/www/app/customer/auto/regionSelect.html
+++ b/udqAutoApp/www/app/customer/auto/regionSelect.html
@@ -11,8 +11,8 @@
             <p>请先选择城市</p>
         </div>
 
-        <ion-list ng-repeat="region in regions"  ng-show="region.pid ==autoInfo.selectedRegionPid" >
-            <ion-radio ng-model="autoInfo.selectedRegionId"  ng-click="goBackOfRegionSelect()" value={{region.id}} class="input-costume-radio"><p style="color:black;">{{region.name}}</p></ion-radio>
+        <ion-list ng-repeat="region in regions"  ng-show="region.pid ==autoInfo.selectedCityId" >
+            <ion-radio ng-model="autoInfo.selectedRegionId"  ng-click="goBackOfDoRegionSelect(region)" value={{region.id}} class="input-costume-radio"><p style="color:black;">{{region.name}}</p></ion-radio>
         </ion-list>
 
     </ion-content>
