--- a/udqAutoApp/www/app/customer/order/orderList.html
+++ b/udqAutoApp/www/app/customer/order/orderList.html
@@ -6,13 +6,19 @@
     </ion-nav-bar>
     <!--订单展示-->
     <ion-tabs class="tabs-top tabs-icon-top" id="tab_order" style="background-color:rgba(23, 190, 208, 0);" >
-        <ion-tab title="最近"  id="div_recently" icon="ion-document-text" style="background-color:rgba(23, 190, 208, 0);"   href="#/customerMyOrder/recentlyOrder?orderDate=recently">
+        <!--<ion-tab title="最近"  id="div_recently" icon="ion-document-text" style="background-color:rgba(23, 190, 208, 0);"   href="#/customerMyOrder/recentlyOrder?orderDate=recently">
             <ion-nav-view name="recentlyOrder-tab"></ion-nav-view>
         </ion-tab>
 
         <ion-tab title="一个月前"  id="div_history" icon="ion-ios-calendar" style="background-color:rgba(23, 190, 208, 0);" href="#/customerMyOrder/historyOrder?orderDate=history">
             <ion-nav-view name="historyOrder-tab"></ion-nav-view>
+        </ion-tab>-->
+        <ion-tab title="最近" id="div_recently" icon="ion-document-text" style="background-color:rgba(23, 190, 208, 0);"href="#/customerMyOrder/recentlyOrder?orderDate=recently">
+            <ion-nav-view name="recentlyOrder-tab"></ion-nav-view>
         </ion-tab>
 
+        <ion-tab title="一个月前" id="div_history" icon="ion-ios-calendar" style="background-color:rgba(23, 190, 208, 0);"href="#/customerMyOrder/historyOrder?orderDate=history">
+            <ion-nav-view name="historyOrder-tab"></ion-nav-view>
+        </ion-tab>
     </ion-tabs>
 </ion-view>
