--- a/udqAutoApp/www/main.html
+++ b/udqAutoApp/www/main.html
@@ -28,6 +28,7 @@
     <script src="app/customer/auto/autoSvr.js"></script>
     <script src="app/customer/home/homeCtrl.js"></script>
     <script src="app/customer/member/memberCenterCtrl.js"></script>
+    <script src="app/customer/member/memberInfoEditCtrl.js"></script>
     <script src="app/customer/member/memberInfoSvr.js"></script>
     <script src="app/customer/member/rechargeCtrl.js"></script>
     <script src="app/customer/order/orderCtrl.js"></script>    
@@ -45,6 +46,11 @@
     <script src="app/customer/auto/autoAddCitySelectController.js"></script>
     <script src="app/customer/auto/autoAddDistrictController.js"></script>
     <script src="app/customer/auto/autoAddRegionSelectController.js"></script>
+    <script src="app/customer/order/historyOrderController.js"></script>
+    <script src="app/customer/order/recentlyOrderController.js"></script>
+    <script src="app/customer/order/orderMgrController.js"></script>
+    <script src="app/customer/auto/autoInfoController.js"></script>
+    <script src="app/customer/member/washShopInfoController.js"></script>
     <script src="app/common/popUpSvr.js"></script>
     <script src="app/common/ionicLoading.js"></script>
 
