--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -7,10 +7,16 @@
 
     <ion-content>
             <ion-list class="input-costume">
-                <ion-radio class="input-costume-radio" ng-model="order.channel" value={{pay.name}} ng-repeat="pay in payMethod">
+                <label class="item item-input item-select">
+                    <span class="input-label">支付方式：</span>
+                    <select ng-model="order.channel" style="float:left" >
+                        <option value="{{pay.name}}" ng-repeat="pay in payMethod" ng-selected="pay.name==order.channel">{{pay.text}}</option>
+                    </select>
+                </label>
+                <!--<ion-radio class="input-costume-radio" ng-model="order.channel" value={{pay.name}} ng-repeat="pay in payMethod">
                     <img style="width:30px;height:30px;float:left" src="{{pay.imgUri}}" />
                     <p style="color:black;float:left;height:30px;margin-left:15px;margin-top:2px">{{pay.text}}<a class="a-custome" ng-show="pay.name=='udq'">(余额：{{user.balance}}元)</a></p>
-                </ion-radio>
+                </ion-radio>-->
                 <div class="spacer" style="height:20px;"></div>
                 <div style="margin-left:25%">
                     <p class="makeorder-money-p" style="color:red;"><a style="font-size:30px">￥</a>总价<a style="font-size:25px">{{order.totalAmount}}</a>元</p>
