--- a/udqAutoApp/www/app/customer/member/recharge.html
+++ b/udqAutoApp/www/app/customer/member/recharge.html
@@ -7,7 +7,21 @@
 
     <ion-content>
             <ion-list class="input-costume">
-                <ion-item class="input-costume">
+                <label class="item item-input item-select">
+                    <span class="input-label">请选择金额：</span>
+                    <select ng-model="balance.amount" style="float:left">
+                        <option value="0.02" ng-selected="0.02==balance.amount">0.02</option>
+                        <option value="50" ng-selected="50==balance.amount">50</option>
+                        <option value="100" ng-selected="100==balance.amount">100</option>
+                    </select>
+                </label>
+                <label class="item item-input item-select">
+                    <span class="input-label">支付方式：</span>
+                    <select ng-model="balance.channel" style="float:left">
+                        <option value="{{pay.name}}" ng-repeat="pay in payMethod" ng-selected="pay.name==balance.channel">{{pay.text}}</option>
+                    </select>
+                </label>
+                <!--<ion-item class="input-costume">
                     <span class="span-black">请选择金额:</span>&nbsp;&nbsp;&nbsp;&nbsp;
                     <label class="select-type"><input type="radio" name="amount" ng-model="balance.amount" checked value='0.02' />0.02</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <label class="select-type"><input type="radio" name="amount" ng-model="balance.amount" value='50' />50</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -16,7 +30,7 @@
                 <ion-radio class="input-costume-radio" ng-model="balance.channel" value={{pay.name}} ng-repeat="pay in payMethod">
                     <img style="width:30px;height:30px;float:left" src="{{pay.imgUri}}" />
                     <p style="color:black;float:left;height:30px;margin-left:15px;margin-top:2px">{{pay.text}}</p>
-                </ion-radio>
+                </ion-radio>-->
             </ion-list>
             <button class="button allbutton button-block button-small" ng-disabled="disabled" style="width:90%;margin-left:5%;" ng-click="recharge()">确定</button>
     </ion-content>
