--- a/udqAutoApp/www/app/customer/member/recharge.html
+++ b/udqAutoApp/www/app/customer/member/recharge.html
@@ -10,9 +10,9 @@
                 <label class="item item-input item-select">
                     <span class="input-label">请选择金额：</span>
                     <select ng-model="balance.amount" style="float:left">
-                        <option value="0.02" ng-selected="0.02==balance.amount">0.02</option>
-                        <option value="50" ng-selected="50==balance.amount">50</option>
-                        <option value="100" ng-selected="100==balance.amount">100</option>
+                        <option value="0.02" ng-selected="0.02==balance.amount">0.02元</option>
+                        <option value="50" ng-selected="50==balance.amount">50元</option>
+                        <option value="100" ng-selected="100==balance.amount">100元</option>
                     </select>
                 </label>
                 <label class="item item-input item-select">
