--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -9,19 +9,28 @@
             <ion-list class="input-costume">
                 <label class="item item-input item-select">
                     <span class="input-label">支付方式：</span>
+                    <select ng-model="order.channel" style="float:left">
+                        <option value="alipay" ng-selected="alipay==order.channel">支付宝</option>
+                        <option value="wx" ng-selected="wx==order.channel">微信</option>
+                        <option value="udq" ng-selected="udq==order.channel">余额宝<a class="a-custome">({{user.balance}}元)</a></option>
+                    </select>
+                </label>
+                <!--<label class="item item-input item-select">
+                    <span class="input-label">支付方式：</span>
                     <select ng-model="order.channel" style="float:left" >
                         <option value="{{pay.name}}" ng-repeat="pay in payMethod" ng-selected="pay.name==order.channel">{{pay.text}}</option>
                     </select>
-                </label>
+                </label>-->
                 <!--<ion-radio class="input-costume-radio" ng-model="order.channel" value={{pay.name}} ng-repeat="pay in payMethod">
                     <img style="width:30px;height:30px;float:left" src="{{pay.imgUri}}" />
                     <p style="color:black;float:left;height:30px;margin-left:15px;margin-top:2px">{{pay.text}}<a class="a-custome" ng-show="pay.name=='udq'">(余额：{{user.balance}}元)</a></p>
                 </ion-radio>-->
+                
                 <div class="spacer" style="height:20px;"></div>
-                <div style="margin-left:25%">
-                    <p class="makeorder-money-p" style="color:red;"><a style="font-size:30px">￥</a>总价<a style="font-size:25px">{{order.totalAmount}}</a>元</p>
-                </div>
-            </ion-list>
+                    <div style="margin-left:25%">
+                        <p class="makeorder-money-p" style="color:red;"><a style="font-size:30px">￥</a>总价<a style="font-size:25px">{{order.totalAmount}}</a>元</p>
+                    </div>
+</ion-list>
             <button class="button allbutton button-block button-small" ng-disabled="disabled" style="width:90%;margin-left:5%;" ng-click="commitOrder()">确定支付</button>
     </ion-content>
 </ion-view>
