--- a/udqAutoApp/www/main.html
+++ b/udqAutoApp/www/main.html
@@ -71,7 +71,7 @@
     <script src="app/util/cameraSvr.js"></script>
     <script src="app/util/fileTransferSvr.js"></script>
     <script src="app/util/jpushSvr.js"></script>
-
+    <script src="lib/ionic/js/angular-ios9-uiwebview.patch.js"></script>
 </head>
 <body ng-csp ng-app="udqApp">
     <ion-nav-view></ion-nav-view>
