--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -9,13 +9,13 @@
     </ion-nav-bar>
     <ion-content padding="true" class="has-header">
         <div class="row" style="border-bottom:1px solid white;">
-            <div class="col col-30">
+            <div class="col col-20">
                 <img src="image/mydianqu.png" style="height:100%;width:100%;" />
             </div>
             <div class="col col-50">
-                <p class="home-p1" ng-show="user.name!=undefined">称呼：{{user.name}}</p>
-                <p class="home-p1" ng-show="user.mobile!=undefined">手机：{{user.mobile}}</p>
-                <p class="home-p1" ng-show="user.mobile!=undefined">余额：<a class="a-custome">{{user.balance}}</a>&nbsp;&nbsp;&nbsp;<button class="rechargeInloginPage" ng-click="goToRecharge()">充值</button></p>
+                <span class="home-p1" ng-show="user.name!=undefined">称呼：{{user.name}}</span>
+                <span class="home-p1" ng-show="user.mobile!=undefined">手机：{{user.mobile}}</span>
+                <span class="home-p1" ng-show="user.mobile!=undefined">余额：<a class="a-custome">{{user.balance}}</a>&nbsp;&nbsp;&nbsp;<button class="rechargeInloginPage" ng-click="goToRecharge()">充值</button></span>
             </div>
             <div class="col col-20">
                 <button class="button-i" ng-click="goToEditOwnerInfo()">
