区域选择修改

--- a/udqAutoApp/www/app/customer/auto/autoAdd.html
+++ b/udqAutoApp/www/app/customer/auto/autoAdd.html
@@ -38,7 +38,7 @@
                     <i class="icon ion-chevron-right"></i>                    
                 </a>
 
-                <a class="item item-icon-right input-costume" ng-click="goToRegionSelect()">
+                <!--<a class="item item-icon-right input-costume" ng-click="goToRegionSelect()">
                     <p class="autoadd-p" ng-show="autoInfo.selectedRegionId ==undefined">选择区域</p>
                     <i class="icon ion-chevron-right"></i>
 
@@ -49,7 +49,7 @@
                             </li>
                         </ul>
                     </div>
-                </a>
+                </a>-->
                 <a class="item item-icon-right input-costume" ng-click="goToDistrictSelect()">
                     <p class="autoadd-p" ng-show="autoInfo.selectedDistrictId ==undefined">选择小区</p>
                     <i class="icon ion-chevron-right"></i>
